--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 h1, h2, h3, h4, h5, h6, span {
     color: #242424;
     text-align: center;
@@ -19,6 +23,10 @@ h1 {
 p {
     line-height: 1.5;
     font-size: 16px;
+}
+
+a {
+    text-decoration: none;
 }
 
 li {
@@ -306,3 +314,58 @@ nav {
     text-align: left;
     color: white;
 }
+
+/* FOOTER */
+
+footer {
+    background-color:#242424 ;
+}
+
+
+.footer__social--list {
+    margin-bottom: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    max-width: 400px;
+}
+
+.footer__row {
+    padding: 8% 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer__logo--image {
+    width: 70px;
+    height: 70px;
+}
+
+.footer__logo--popper,
+.footer__social--link {
+    color: white;
+}
+
+.footer__logo--popper {
+    position: absolute;
+    right: 0;
+    top: 30px;
+    left: 20px;
+    font-weight: 700;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+.footer__anchor {
+    position: relative;
+    margin-bottom: 20px
+}
+
+.footer__anchor:hover .footer__logo--popper {
+    transform: translateX(35px);
+    opacity: 1
+
+}
+
